fix off-canvas on homepage

--- a/apps/templates/base.html
+++ b/apps/templates/base.html
@@ -83,8 +83,8 @@
     <a href="https://readux.ecds.emory.edu/" style="color:darkblue;text-decoration:underline;">Readux</a>.
     </div>
     {% endif %}
-    <div class="uk-container" id="v-readux">
-      <nav class="" uk-navbar id="rx-nav">
+    <div class="uk-container">
+      <nav uk-navbar id="rx-nav">
         <div class="uk-navbar-left">
           <a class="uk-navbar-item uk-logo uk-padding-remove-left uk-visible@s" href="/">
             <img src="{% static 'images/readux.svg' %}" style="width: 50px; padding: 20px 0 0 0" alt="Readux">
