add accidentally removed v-readux id

--- a/apps/templates/base.html
+++ b/apps/templates/base.html
@@ -83,7 +83,7 @@
     <a href="https://readux.ecds.emory.edu/" style="color:darkblue;text-decoration:underline;">Readux</a>.
     </div>
     {% endif %}
-    <div class="uk-container">
+    <div class="uk-container" id="v-readux">
       <nav uk-navbar id="rx-nav">
         <div class="uk-navbar-left">
           <a class="uk-navbar-item uk-logo uk-padding-remove-left uk-visible@s" href="/">
