--- a/apps/static/css/project.scss
+++ b/apps/static/css/project.scss
@@ -1285,6 +1285,14 @@ fieldset {
     width: 100%;
     left: 0;
   }
+
+  .rx-navbar-nav {
+    display: block;
+  }
+  
+  .uk-logo {
+    padding: 0;
+  }
 }
 
 @media (min-width: 640px) {
