--- a/apps/templates/menus/main_menu.html
+++ b/apps/templates/menus/main_menu.html
@@ -1,6 +1,6 @@
 {% load menu_tags %}
 {% if menu_items %}
-  <ul class="uk-navbar-nav">
+  <ul class="uk-navbar-nav rx-navbar-nav">
     {% for item in menu_items %}
       <li>
         <a href="{{ item.href }}" class="rx-nav-item">{{ item.text }}</a> {% if item.has_children_in_menu %}{% sub_menu item %}{% endif %}
