--- a/apps/templates/cms/collections_page.html
+++ b/apps/templates/cms/collections_page.html
@@ -79,7 +79,7 @@
           {{collection.manifests.all|length}} volume{{collection.manifests.all|length|pluralize}}
         </div>
         <p>
-          {{collection.summary}}
+          {{collection.summary|safe}}
         </p>
       </div>
     </div>
