--- a/apps/templates/base.html
+++ b/apps/templates/base.html
@@ -144,7 +144,9 @@
           </ul>
         </div>
       </nav>
-
+      
+      <main id='main'>
+      
       {% if messages %}
           {% for message in messages %}
             <div class="uk-alert-{{ message.tags }}" uk-alert>
@@ -180,6 +182,8 @@
 
       {% block viewer %}{% endblock viewer %}
 
+    </main>
+    
     </div>
 
     {% block javascript %}
