--- a/apps/templates/cms/home_page.html
+++ b/apps/templates/cms/home_page.html
@@ -38,7 +38,7 @@
               <div class="rx-title-tagline">{{collection.manifests.all|length}}
                 volume{{collection.manifests.all|length|pluralize}}
               </div>
-              <p class="rx-card-text">{{ collection.summary }}</p>
+              <p class="rx-card-text">{{ collection.summary|safe }}</p>
             </a>
           </div>
         </article>
@@ -135,7 +135,7 @@
               <div class="rx-title-tagline">{{collection.manifests.all|length}}
                 volume{{collection.manifests.all|length|pluralize}}
               </div>
-              <p class="rx-card-text">{{ collection.summary }}</p>
+              <p class="rx-card-text">{{ collection.summary|safe }}</p>
             </a>
           </div>
         </article>
