--- a/apps/templates/cms/home_page.html
+++ b/apps/templates/cms/home_page.html
@@ -42,7 +42,7 @@
                 <div class="rx-title-tagline">{{collection.manifests.all|length}}
                   volume{{collection.manifests.all|length|pluralize}}
                 </div>
-                <p class="rx-card-text">{{ collection.summary }}</p>
+                <p class="rx-card-text">{{ collection.summary|safe }}</p>
               </a>
             </div>
           </article>
@@ -122,7 +122,7 @@
                 <div class="rx-title-tagline">{{collection.manifests.all|length}}
                   volume{{collection.manifests.all|length|pluralize}}
                 </div>
-                <p class="rx-card-text">{{ collection.summary }}</p>
+                <p class="rx-card-text">{{ collection.summary|safe }}</p>
               </a>
             </div>
           </article>
