--- a/apps/templates/base.html
+++ b/apps/templates/base.html
@@ -82,9 +82,9 @@
     <div class="uk-container" id="v-readux">
       <nav uk-navbar id="rx-nav">
         <div class="uk-navbar-left">
-          <a class="uk-navbar-item uk-logo uk-padding-remove-left uk-visible@s" href="/">
+          <h1><a class="uk-navbar-item uk-logo uk-padding-remove-left uk-visible@s" href="/">
             <img src="{% static 'images/readux.svg' %}" style="width: 50px; padding: 20px 0 0 0" alt="Readux">
-          </a>
+          </a></h1>
 
           <div class="uk-visible@s">
             {% main_menu %}
