--- a/apps/templates/cms/collections_page.html
+++ b/apps/templates/cms/collections_page.html
@@ -10,7 +10,7 @@
     <li class="rx-breadcrumb-item">Collections</li>
   </ul>
 
-  <div class="rx-title">{{ page.page_title }}</div>
+  <div><h2 class="rx-title" style="margin-bottom:0;line-height: 1.5;">{{ page.page_title }}</div>
   <div class="rx-title-tagline">{{page.tagline}}</div>
 </div>
 
