more access improvements and fix all collections layout on home page

--- a/apps/static/css/project.scss
+++ b/apps/static/css/project.scss
@@ -15,6 +15,15 @@ $rx-color-accent-2: #510029;
   width: 50%;
 }
 
+.uk-link, a {
+  color: var(--link-color);
+  text-decoration: underline dotted;
+}
+
+a.nav-link {
+  text-decoration: none;
+}
+
 .uk-button-primary {
   background-color: var(--link-color);
 }
