--- a/apps/templates/base.html
+++ b/apps/templates/base.html
@@ -162,7 +162,7 @@
       {# Modal for signin #}
       <div id="signin-modal" class="uk-flex-top" uk-modal>
         <div class="uk-modal-dialog uk-modal-body uk-margin-auto-vertical">
-          <button class="uk-modal-close-default" type="button" uk-close></button>
+          <button class="uk-modal-close-default" aria-label="close sign in modal" type="button" uk-close></button>
           <section class="uk-modal-header">
             <h2 class="uk-modal-title uk-text-center">
             {% if user.is_authenticated %}
