--- a/apps/templates/collection.html
+++ b/apps/templates/collection.html
@@ -39,7 +39,7 @@
   <div class="pagination" style="margin-bottom:20px">
       <span class="step-links">
           {% if page_obj.has_previous %}
-              <a href="?{% url_replace page=page_obj %}" style="margin-right:5px;">&laquo; first</a>
+              <a href="?{% url_replace page=1 %}" style="margin-right:5px;">&laquo; first</a>
               <a href="?{% url_replace page=page_obj.previous_page_number %}" style="margin-right:5px;">previous</a>
           {% endif %}
 
@@ -49,7 +49,7 @@
 
           {% if page_obj.has_next %}
               <a href="?{% url_replace page=page_obj.next_page_number %}" style="margin-left:5px;">next</a>
-              <a href="?{% url_replace page=page_obj.num_pages %}" style="margin-left:5px;">last &raquo;</a>
+              <a href="?{% url_replace page=page_obj.paginator.num_pages %}" style="margin-left:5px;">last &raquo;</a>
           {% endif %}
       </span>
   </div>
