--- a/apps/templates/page.html
+++ b/apps/templates/page.html
@@ -45,7 +45,7 @@
 
 
   <nav class="rx-flex-parent" uk-navbar id="rx-page-info-panel">
-    
+
     <div class="rx-flex-child">
       <a class="uk-navbar-item uk-logo uk-padding-remove-left rx-page-logo" href="/">
         <img src="{% static 'images/readux.svg' %}" style="width: 50px; padding: 0 0 0 0" alt="Readux">
@@ -136,7 +136,7 @@
         </li>
       </ul>
     </div>
-      
+
   </nav>
 
   <div id="offcanvas-usage" uk-offcanvas="flip: true">
@@ -278,7 +278,7 @@
           </div>
         </div>
         {% endif %}
-        
+
       </div>
     </div>
 
@@ -413,6 +413,7 @@
         canvasID: 'https://{{ request.META.HTTP_HOST }}/iiif/{{ page.manifest.pid }}/canvas/{{ page.pid }}',{% endif %}
         displayLayout: false,
         sidePanel: false,
+        bottomPanel: false,
         {% if "/page/all" in request.get_full_path %}
         canvasID: 'https://{{ request.META.HTTP_HOST }}/iiif/{{ volume.pid }}/canvas/{{ volume.canvas_set.pid.first }}',
         viewType: "ThumbnailsView"
